# doorbell_chime

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Dockerfile  Makefile  PLAN.md  Pipfile  README.md  docker-compose.yml
data/: strips_config.json
data/cycles/: all_white.json  occasional_kitt.json  usa_usa.json
light-control/: README.md  command_watcher.py  config.json  config.py  cycle.json  cycle.py  cycles.py  dev-logging.conf  heliocron  index.py  leds.py  light_config.py  light_config_sample.json  light_strip.py  lights.service  logging.conf  runner.py  status.py  timer.py  turn-off-lights.timer  turn-on-lights.service  turn-on-lights.timer
light-control-ts/: .env.sample  index.ts  package-lock.json  package.json  status.json
light-control-ts/cycles/: all_off.json  default_cycle.json  halloween.json  occasional_kitt.json
light-control-ts/service scripts/: lights.service
lights-cli/: go.mod  go.sum  main.go
lights-control-server/: .env.sample  ecosystem.config.js  jest.config.js  package.json  status.json  tsconfig.json
strip-client/: strip_config.json
strip-client-python/: Pipfile  requirements.txt  strip_client.py
strip-client-rust/: .gitignore  Cargo.toml  Dockerfile.build  Dockerfile.build-armv6  build-pi-zero.sh  build-pi.sh  strip-client.service  strip_config.json
strip-client-rust/src/: main.rs
strip-client-ts/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
web/: package.json  tsconfig.client.json  tsconfig.server.json
web-client/: .babelrc  package.json  tsconfig.json  webpack.config.js
(+288 files in other folders)
