[package]
name = "strip-client-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "strip-client"
path = "src/main.rs"

[features]
hardware = ["dep:rs_ws281x"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.21"
rs_ws281x = { version = "0.5", optional = true }
